	- added: ecatools - ecasignalview added to the package; 
		 see ecatools(1) man page for details
	- added: new modules - libecasoundc and pyecasound
	- added: --disable-pyecasound configure switch
	- added: './contrib' and './examples' directories added
		 to the distribution package
	- added: ecasound control interface documentation added - 
		 see 'Documentation/programmers_guide/eci_doc.html'
	- removed: the "LADSPA/" prefix removed from plugin labels
	- removed: support for underscores in EIAM-commands
	- changed: more intelligent handling of resource files
	           (for instance ~/.ecasoundrc and preset files)
	- changed: output produced by -ev
	- changed: updated ALSA 0.6.x support to match pcmfinal-state
	- changed: minor changes to multitrack sync code; should 
		   now be even more accurate
	- changed: triggering of realtime outputs; now all rt-outputs
		   are prefilled with two buffers before triggering
	- changed: Mandrake and PLD Linux RPM-spec files moved into
		   the new './contrib' directory
	- fixed: nasty bug in effect preset mapping
	- fixed: -ei:0 caused problems
	- fixed: cdr-file endianess (should be _always_ big endian)
	- fixed: yet more fixes to mono mp3 input handling
	- fixed: input problems (easily triggered by using -sr)
		 with .mp3, .mid and mikmod modules
	- fixed: c-setpos didn't work if chainsetup wasn't connected
	- fixed: commas in descriptions of LADSPA plugin parameters
		 confused ecasound, and usually ended up crashing
		 (triggered at least by the hermes filter)
07112000 (v1.8.4d15)
	- added: pulse gate (-eemp); can be used to generate a
	         metronome signal [rcs]
	- added: support for preset parameters - see file 
                 'effect_presets' for examples [artham]
	- added: support for MIDI files using Timidity++
	- added: input and output of Ogg Vorbis files (.ogg) using 
		 ogg123 and vorbize
	- added: version control to internal plugins; when compiling,